// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props.pickup is false 1`] = `
<div
  className="flex-100 layout-row route_result"
  key="555777"
>
  <div
    className="flex-70 layout-row layout-wrap"
  >
    <div
      className="flex-100 layout-row layout-align-start-center top_row"
    >
      <div
        className="flex-80 layout-row layout-align-start-center hubs_row"
      >
        <div
          className="header_hub"
        >
          <i
            className="fa fa-map-marker map_marker"
          />
          <h4
            className="flex-100"
          >
             
             
          </h4>
        </div>
        <div
          className="connection_graphics flex"
        >
          <div
            className="flex-none layout-row layout-align-center-center"
          >
            <i
              className="fa fa-anchor  "
              style={Object {}}
            />
          </div>
          <div
            style={
              Object {
                "background": "linear-gradient(to right, transparent 70%, white 30%), linear-gradient(to right, #333, #fafafa)",
                "backgroundSize": "16px 2px, 100% 2px",
                "height": "2px",
                "marginTop": "6px",
                "width": "100%",
              }
            }
          />
        </div>
        <div
          className="header_hub"
        >
          <i
            className="fa fa-flag-o flag"
          />
          <h4
            className="flex-100"
          >
             
             
          </h4>
          <div
            className="flex-100"
          >
            <p
              className="flex-100"
            >
               
               
            </p>
          </div>
        </div>
      </div>
      <div
        className="flex-20 layout-row layout-wrap layout-align-start-center carrier_service_level"
      />
    </div>
    <div
      className="flex-100 layout-row layout-align-start-center"
    >
      <div
        className="flex-25 layout-wrap layout-row layout-align-center-center"
      >
        <div
          className="flex-100 layout-row"
        >
          <h4
            className="date_title"
          >
            Closing Date
          </h4>
        </div>
        <div
          className="flex-100 layout-row"
        >
          <p
            className="flex-none sched_elem"
          >
             
            28-03-2018
             
          </p>
        </div>
      </div>
      <div
        className="flex-25 layout-wrap layout-row layout-align-center-center"
      >
        <div
          className="flex-100 layout-row"
        >
          <h4
            className="date_title"
          >
            ETD 
          </h4>
        </div>
        <div
          className="flex-100 layout-row"
        >
          <p
            className="flex-none sched_elem"
          >
             
            28-03-2018
             
          </p>
        </div>
      </div>
      <div
        className="flex-25 layout-wrap layout-row layout-align-center-center"
      >
        <div
          className="flex-100 layout-row"
        >
          <h4
            className="date_title"
          >
            ETA  
          </h4>
        </div>
        <div
          className="flex-100 layout-row"
        >
          <p
            className="flex-none sched_elem"
          >
             
            28-03-2018
             
          </p>
        </div>
      </div>
      <div
        className="flex-25 layout-wrap layout-row layout-align-center-center"
      >
        <div
          className="flex-100 layout-row"
        >
          <h4
            className="date_title"
          >
            Estimated Transit Time
            <sup>
              *
            </sup>
          </h4>
        </div>
        <div
          className="flex-100 layout-row"
        >
          <p
            className="flex-none sched_elem"
          >
             
            0
            days
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex-30 layout-row layout-wrap layout-align-center"
  >
    <div
      className="flex-90 layout-row layout-align-space-between-center layout-wrap"
    >
      <p
        className="flex-none"
      >
        Total Price:
      </p>
      <Price
        currency="EUR"
        scale=""
        value={112}
      />
    </div>
    <div
      className="flex-90 layout-row layout-align-space-between-center layout-wrap"
    >
      <RoundButton
        active={true}
        back={false}
        classNames=""
        disabled={false}
        flexContainer="100"
        handleDisabled={null}
        handleNext={[Function]}
        icon=""
        iconClass=""
        inverse={false}
        size="full"
        text="Choose"
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`shallow rendering 1`] = `
<div
  className="flex-100 layout-row route_result"
  key="555777"
>
  <div
    className="flex-70 layout-row layout-wrap"
  >
    <div
      className="flex-100 layout-row layout-align-start-center top_row"
    >
      <div
        className="flex-80 layout-row layout-align-start-center hubs_row"
      >
        <div
          className="header_hub"
        >
          <i
            className="fa fa-map-marker map_marker"
          />
          <h4
            className="flex-100"
          >
             
             
          </h4>
        </div>
        <div
          className="connection_graphics flex"
        >
          <div
            className="flex-none layout-row layout-align-center-center"
          >
            <i
              className="fa fa-anchor  "
              style={Object {}}
            />
          </div>
          <div
            style={
              Object {
                "background": "linear-gradient(to right, transparent 70%, white 30%), linear-gradient(to right, #333, #fafafa)",
                "backgroundSize": "16px 2px, 100% 2px",
                "height": "2px",
                "marginTop": "6px",
                "width": "100%",
              }
            }
          />
        </div>
        <div
          className="header_hub"
        >
          <i
            className="fa fa-flag-o flag"
          />
          <h4
            className="flex-100"
          >
             
             
          </h4>
          <div
            className="flex-100"
          >
            <p
              className="flex-100"
            >
               
               
            </p>
          </div>
        </div>
      </div>
      <div
        className="flex-20 layout-row layout-wrap layout-align-start-center carrier_service_level"
      />
    </div>
    <div
      className="flex-100 layout-row layout-align-start-center"
    >
      <div
        className="flex-25 layout-wrap layout-row layout-align-center-center"
      >
        <div
          className="flex-100 layout-row"
        >
          <h4
            className="date_title"
          >
            Pick-up Date
          </h4>
        </div>
        <div
          className="flex-100 layout-row"
        >
          <p
            className="flex-none sched_elem"
          >
             
            27-03-2018
             
          </p>
        </div>
      </div>
      <div
        className="flex-25 layout-wrap layout-row layout-align-center-center"
      >
        <div
          className="flex-100 layout-row"
        >
          <h4
            className="date_title"
          >
            ETD 
          </h4>
        </div>
        <div
          className="flex-100 layout-row"
        >
          <p
            className="flex-none sched_elem"
          >
             
            28-03-2018
             
          </p>
        </div>
      </div>
      <div
        className="flex-25 layout-wrap layout-row layout-align-center-center"
      >
        <div
          className="flex-100 layout-row"
        >
          <h4
            className="date_title"
          >
            ETA  
          </h4>
        </div>
        <div
          className="flex-100 layout-row"
        >
          <p
            className="flex-none sched_elem"
          >
             
            28-03-2018
             
          </p>
        </div>
      </div>
      <div
        className="flex-25 layout-wrap layout-row layout-align-center-center"
      >
        <div
          className="flex-100 layout-row"
        >
          <h4
            className="date_title"
          >
            Estimated Transit Time
            <sup>
              *
            </sup>
          </h4>
        </div>
        <div
          className="flex-100 layout-row"
        >
          <p
            className="flex-none sched_elem"
          >
             
            0
            days
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex-30 layout-row layout-wrap layout-align-center"
  >
    <div
      className="flex-90 layout-row layout-align-space-between-center layout-wrap"
    >
      <p
        className="flex-none"
      >
        Total Price:
      </p>
      <Price
        currency="EUR"
        scale=""
        value={112}
      />
    </div>
    <div
      className="flex-90 layout-row layout-align-space-between-center layout-wrap"
    >
      <RoundButton
        active={true}
        back={false}
        classNames=""
        disabled={false}
        flexContainer="100"
        handleDisabled={null}
        handleNext={[Function]}
        icon=""
        iconClass=""
        inverse={false}
        size="full"
        text="Choose"
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
      />
    </div>
  </div>
</div>
`;
